feat:build 에러 조치